# DaiLerobot

./: README.md  main.py  pyproject.toml
calibration_cache/: dai_right_robot.json
scripts/: calibrate.py  find_port.py  move_robot.py
src/dai_lerobot/driver/: __init__.py  motor.md
src/dai_lerobot/driver/motor_driver/: motors_bus.py  protocol.py  utils.py
src/dai_lerobot/driver/motor_driver/feetech/: feetch.py  table.py
src/dai_lerobot/processors/: __init__.py  types.py
src/dai_lerobot/robot/: __init__.py  core.py  robot.py
src/dai_lerobot/teleoperators/: config.py  teleoperator.py
src/dai_lerobot/teleoperators/gamepad/: __init__.py  gamepad_config.py  gamepad_controlled.py  gamepad_teleoperator.py
src/dai_lerobot/tests/: gamepad_test.py
